# oy-cli

./: .gitignore  .mise.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GO_PORT_TRACKER.md  ISSUES.md  README.md  REVIEW.md  ROADMAP.md  SECURITY.md  book.toml  build.rs  go.mod  go.sum  justfile  mise.toml  oy_cli.py  providers.py  pyproject.toml  shim.py  todo.md
.cargo/: config.toml
.config/: nextest.toml
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: session_text.toml
assets/cursor/agents/: oy.md
assets/cursor/rules/: oy.mdc
assets/cursor/skills/oy-audit/: SKILL.md
assets/cursor/skills/oy-enhance/: SKILL.md
assets/cursor/skills/oy-review/: SKILL.md
cmd/oy/: main.go
docs/: GOOD_FIRST_ISSUES.md  SUMMARY.md  architecture.md  compatibility.md  eval-corpus.toml  evaluation.md  examples.md  getting-started.md  index.html  index.md  install.sh  npm-publishing.md  project.md  reference.md  tool-safety.md  workflows.md
internal/oy/agent/: agent.go  agent_test.go
internal/oy/aws/: sigv4.go  sigv4_test.go
internal/oy/cli/: cli.go  cli_test.go
internal/oy/providers/: bedrock.go  codex.go  copilot.go  files.go  http.go  openai.go  protocol.go  protocol_decode.go  protocol_helpers.go  protocol_messages.go  protocol_reasoning.go  providers_test.go  registry.go  shims.go  types.go
internal/oy/runtime/: runtime.go  runtime_test.go  session_text.toml
internal/oy/tools/: exec.go  fs.go  helpers.go  list_read.go  prompt.go  registry.go  replace.go  schema.go  search.go  sloc.go  tools.go  tools_test.go  web.go
internal/oy/ui/: prompt.go  prompt_test.go
legacy-python/: README.md  pyproject.toml
legacy-python/oy_cli/: __init__.py  agent.py  providers.py  session_text.toml  tools.py
legacy-python/tests/: conftest.py  test_agent.py  test_cli.py  test_providers.py  test_runtime.py
oy_cli/: __init__.py  agent.py  aws_sigv4.py  cli.py  modes.py  protocol.py  providers.py  runtime.py  serialization.py  session_text.py  session_text.toml  shim.py  tools.py
oy_cli/tooling/: core.py  files.py  interaction.py  output.py  shell.py  web.py
scripts/: eval_runner.py  test_install.sh
src/: agent.rs  app.rs  artifacts.rs  audit.rs  bedrock.rs  chat.rs  cli.rs  config.rs  cursor.rs  highlight.rs  lib.rs  main.rs  mcp.rs  model.rs  net.rs  opencode.rs  prompts.rs  review.rs  session.rs  text.rs  tools.rs  ui.rs  workflow.rs
src/agent/: auth.rs  bedrock.rs  chat.rs  compaction.rs  endpoints.rs  model.rs  opencode_models.rs  retry.rs  session.rs  transcript.rs
src/agent/model/: exec.rs  live_tests.rs  metadata.rs  reasoning.rs  tests.rs
src/agent/session/: noop.rs  storage.rs
src/audit/: enhance.rs  findings.rs  input.rs  progress.rs  prompts.rs  reduce.rs  report.rs  sarif.rs  transparency.rs
src/cli/: app.rs  chat.rs  config.rs  ui.rs
src/cli/app/: audit_cmd.rs  doctor_cmd.rs  enhance_cmd.rs  model_cmd.rs  review_cmd.rs  session_cmd.rs  upgrade_cmd.rs
src/cli/chat/: commands.rs  history.rs
src/cli/chat/snapshots/: oy__cli__chat__commands__tests__chat_help_snapshot.snap
src/cli/config/: atomic_write.rs  env_config.rs  mode.rs  model_config.rs  paths.rs  prompt.rs  sessions.rs
src/cli/config/platform/: mod.rs  windows.rs
src/cli/snapshots/: oy__cli__app__audit_tests__doctor_help_snapshot.snap
src/cli/ui/: progress.rs  render.rs  text.rs  title.rs
src/cursor/: setup.rs
src/cursor/setup/: tests.rs
src/llm/: cache_policy.rs  mod.rs  openai.rs  protocols.rs  providers.rs  route.rs  schema.rs  tool_runtime.rs
src/llm/protocols/: anthropic_messages.rs  bedrock_converse.rs  bedrock_event_stream.rs  gemini.rs  openai_chat.rs  openai_responses.rs  shared.rs  utils.rs
src/llm/protocols/utils/: bedrock_cache.rs  provider_options.rs  tool_stream.rs
src/llm/providers/: route.rs
src/llm/route/: auth.rs  endpoint.rs  framing.rs  resolve.rs  transport.rs
src/llm/test/: auth.rs  cache_policy.rs  chat_tests.rs  endpoint.rs  executor.rs  framing.rs  llm.rs  provider.rs  responses_tests.rs  tool_runtime.rs  tool_stream.rs  transport.rs
src/llm/test/protocols/: anthropic_messages.rs  bedrock_cache.rs  bedrock_converse.rs  bedrock_event_stream.rs  gemini.rs  provider_options.rs
src/opencode/: api.rs  host.rs  runner.rs  setup.rs
src/opencode/agents/: oy-auditor.md  oy-auto.md  oy-edit.md  oy-enhancer.md  oy-plan.md  oy-reviewer.md  oy.md
src/opencode/setup/: backup.rs  config_file.rs  tests.rs
src/opencode/skills/oy-audit/: SKILL.md
src/tools/: args.rs  clone.rs  external.rs  llm.rs  mod.rs  network.rs  outline.rs  output.rs  policy.rs  preview.rs  registry.rs  schema.rs  shell.rs  snapshot.rs  tests.rs  think.rs  todo.rs  workspace.rs
src/tools/preview/: common.rs  network.rs  planning.rs  process.rs  workspace.rs
src/tools/snapshots/: oy__tools__preview__tests__tool_preview_bash_failure_snapshot.snap  oy__tools__preview__tests__tool_preview_normal_snapshot.snap  oy__tools__preview__tests__tool_preview_replace_normal_snapshot.snap  oy__tools__preview__tests__tool_preview_verbose_snapshot.snap  oy__tools__preview__tests__tool_preview_webfetch_snapshot.snap
src/tools/tests/: list.rs  network.rs  patch.rs  policy.rs  read.rs  replace.rs  schema.rs  search.rs  shell.rs  sloc.rs  todo.rs  workspace_tools.rs
src/tools/workspace/: diff.rs  discovery.rs  list.rs  mod.rs  outline.rs  output.rs  patch.rs  paths.rs  read.rs  replace.rs  search.rs  sighthound.rs  sloc.rs
tests/: conftest.py  snapshots.rs  test_agent.py  test_async_cleanup.py  test_cli.py  test_oy_cli.py  test_providers.py  test_runtime.py  test_shim.py  test_suite.py  test_tools.py
tests/snapshots/: snapshots__chat_help_snapshot.snap  snapshots__tool_preview_bash_failure_snapshot.snap  snapshots__tool_preview_normal_snapshot.snap  snapshots__tool_preview_replace_normal_snapshot.snap  snapshots__tool_preview_verbose_snapshot.snap  snapshots__tool_preview_webfetch_snapshot.snap
(+2 files in other folders)
