[package]
name = "oy-cli"
version = "0.11.0"
edition = "2024"
rust-version = "1.96"
description = "OpenCode launcher and deterministic MCP helpers for repository audit and review workflows"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wagov-dtt/oy-cli"
homepage = "https://github.com/wagov-dtt/oy-cli"
keywords = ["ai", "cli", "opencode", "mcp", "audit"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "oy"
path = "src/lib.rs"

[[bin]]
name = "oy"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["outline"]
outline = ["tree-sitter", "tree-sitter-rust", "tree-sitter-python", "tree-sitter-javascript", "tree-sitter-typescript", "tree-sitter-go", "tree-sitter-java", "tree-sitter-c", "tree-sitter-cpp", "tree-sitter-c-sharp", "tree-sitter-ruby", "tree-sitter-php", "tree-sitter-swift", "tree-sitter-kotlin-ng", "tree-sitter-bash", "tree-sitter-lua", "tree-sitter-dart"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/oy-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
dirs = "6.0"
ignore = "0.4"
regex = "1.11"

tree-sitter = { version = "0.24", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-php = { version = "0.23", optional = true }
tree-sitter-swift = { version = "0.6", optional = true }
tree-sitter-kotlin-ng = { version = "1.1.0", optional = true }
tree-sitter-bash = { version = "0.23", optional = true }
tree-sitter-lua = { version = "0.2", optional = true }
tree-sitter-dart = { version = "0.2", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokei = { version = "14.0", default-features = false }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
tempfile = "3.27"
streaming-iterator = "0.1.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading"
] }

[dev-dependencies]
insta = "1.47"

[profile.dev]
debug = "line-tables-only"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = "symbols"
