[package]
name = "oy-cli"
version = "0.11.6"
edition = "2024"
rust-version = "1.96"
description = "OpenCode launcher and deterministic MCP helpers for repository audit and review workflows"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wagov-dtt/oy-cli"
homepage = "https://github.com/wagov-dtt/oy-cli"
keywords = ["ai", "cli", "opencode", "mcp", "audit"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "oy"
path = "src/lib.rs"

[[bin]]
name = "oy"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/oy-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
dirs = "6.0"
ignore = "0.4"
regex = "1.11"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
tempfile = "3.27"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading"
] }

[dev-dependencies]
insta = "1.47"

[profile.dev]
debug = "line-tables-only"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = "symbols"
