[package]
name = "oy-cli"
version = "0.13.7"
edition = "2024"
rust-version = "1.96"
description = "Focused OpenCode agent with repeatable audits, code reviews, and one-finding fixes"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/adonm/oy-cli"
homepage = "https://oy.adonm.dev/"
documentation = "https://docs.rs/oy-cli"
keywords = ["opencode", "code-review", "security-audit", "coding-agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "oy"
path = "src/lib.rs"

[[bin]]
name = "oy"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/oy-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
dirs = "6.0"
ignore = "0.4"
getrandom = "0.3"
regex = "1.11"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.27"
wait-timeout = "0.2"
libc = "0.2"

[dev-dependencies]
insta = "1.47"

[profile.dev]
debug = "line-tables-only"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = "symbols"
