[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "oy-cli"
version = "0.4.0"
description = "Tiny local coding CLI with a small tool surface"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
authors = [{ name = "oy-cli contributors" }]
dependencies = [
  "boto3>=1.35.0",
  "defopt>=7.0.0",
  "httpx>=0.28.1",
  "openai>=1.68.0",
  "rich>=14.3.0",
  "tiktoken>=0.7.0",
  "tenacity>=9.0.0",
  "msgspec>=0.20.0",
  "headroom-ai>=0.4.6",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.11.0",
]

[project.scripts]
oy = "oy_cli:main"

[project.urls]
Homepage = "https://github.com/wagov-dtt/oy-cli"
Repository = "https://github.com/wagov-dtt/oy-cli"
Issues = "https://github.com/wagov-dtt/oy-cli/issues"

[tool.setuptools]
py-modules = ["oy_cli", "shim", "providers"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
