[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "oy-cli"
version = "0.4.3b2"
description = "Tiny local coding CLI with a small tool surface"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [{ name = "oy-cli contributors" }]
dependencies = [
  "defopt>=7.0.0",
  "markdownify>=1.2.0",
  "pygments>=2.19.0",
  "tiktoken>=0.7.0",
  "tenacity>=9.0.0",
  "toons>=0.5.3",
  "prompt-toolkit>=3.0.50",
  "regex>=2026.0.0",
  "pathspec>=0.12.1",
  "zstandard>=0.23.0",
  "pygount>=3.0.0",
  "urllib3>=2.5.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.11.0",
]

[project.scripts]
oy = "oy_cli.cli:main"

[project.urls]
Homepage = "https://github.com/wagov-dtt/oy-cli"
Repository = "https://github.com/wagov-dtt/oy-cli"
Issues = "https://github.com/wagov-dtt/oy-cli/issues"

[tool.setuptools.package-data]
oy_cli = ["session_text.toml"]

[tool.setuptools.packages.find]
include = ["oy_cli", "oy_cli.*"]


[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

