[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "oy-cli"
version = "0.5.0"
description = "Tiny local coding CLI with a small tool surface"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [{ name = "oy-cli contributors" }]
dependencies = [
  "rapidfuzz>=3.14.3",
  "defopt>=7.0.0",
  "markdownify>=1.2.2",
  "pygments>=2.19.2",
  "tiktoken>=0.12.0",
  "tenacity>=9.1.4",
  "toons>=0.5.3",
  "prompt-toolkit>=3.0.52",
  "regex>=2026.2.28",
  "pathspec>=1.0.4",
  "zstandard>=0.25.0",
  "pygount>=3.1.1",
  "rich>=14.3.3",
  "urllib3>=2.6.3",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.15.6",
]

[project.scripts]
oy = "oy_cli.cli:main"
oy-cli = "oy_cli.cli:main"

[project.urls]
Homepage = "https://github.com/wagov-dtt/oy-cli"
Repository = "https://github.com/wagov-dtt/oy-cli"
Issues = "https://github.com/wagov-dtt/oy-cli/issues"

[tool.setuptools.package-data]
oy_cli = ["session_text.toml"]

[tool.setuptools.packages.find]
include = ["oy_cli", "oy_cli.*"]


[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

